# Machine-learning-ESP32

./: .gitignore  CMakeLists.txt  README.md  prj.conf
.github/workflows/: clang-format.yml
src/: main.cpp
src/buttons/: buttons.cpp  buttons.hpp
src/ctr/: vector.hpp
src/ctr/impl/: vector_impl.hpp
src/ctr/iterator/: vector_iterator.hpp
src/display/: display.cpp  display.hpp
src/ml/: types.hpp
src/ml/dense_layer/: dense_layer.cpp  dense_layer.hpp  interface.hpp
src/ml/neural_network/: interface.hpp  single_layer.cpp  single_layer.hpp
src/utils/: type_traits.hpp  utils.hpp
src/utils/impl/: utils_impl.hpp
